[package]
name = "debounced"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Utility for building delayed `Future`s and debounced `Stream`s that wait a given duration before yielding the most recent item."
documentation = "https://docs.rs/debounced/"
homepage = "https://github.com/glacyr/debounced"
repository = "https://github.com/glacyr/debounced"

[dependencies]
tokio = { version = "1.32.0", features = ["time"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink"] }

[dev-dependencies]
futures-channel = { version = "0.3.28", features = ["sink"] }
tokio = { version = "1.32.0", features = ["full", "test-util"] }
tokio-test = "0.4.3"
